// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert matches snapshot for danger 1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger alert-dismissible fade"
    role="alert"
  >
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
    You did not enter the correct information
  </div>
</DocumentFragment>
`;

exports[`Alert matches snapshot for success 1`] = `
<DocumentFragment>
  <div
    class="alert alert-success alert-dismissible fade"
    role="alert"
  >
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
    I did it!
  </div>
</DocumentFragment>
`;
